# research

./: .gitignore  CONTRIBUTING.md  README.md  new_experiment.py  update_readme.py
.github/workflows/: update-readme.yml
experiments/hello-world/: README.md  hello.py  pyproject.toml
experiments/python-markdown-comparison/: README.md  feature_analysis.py  feature_comparison.json  generate_charts.py  requirements.txt  test_documents.py
experiments/tokenizer-comparison/: .gitignore  QUICKSTART.md  README.md  demo.py  evaluation.py  pyproject.toml  run_with_local_papers.py  tokenizer_wrapper.py  utils.py  visualization.py
experiments/tokenizer-comparison/api/: app.py
experiments/tokenizer-comparison/notebooks/: analysis.ipynb
experiments/tokenizer-comparison/real_papers_output/results/: report.md  results.json  summary.csv
experiments/tokenizer-comparison/real_papers_output/results/normalized/: 1810.04805_normalized.txt  2105.13626_normalized.txt
experiments/tokenizer-comparison/real_papers_output/results/raw/: 1706.03762_raw.txt  1810.04805_raw.txt  2105.13626_raw.txt
experiments/tokenizer-comparison/results/: report.md  results.json  sentence_examples.json  summary.csv
experiments/tokenizer-comparison/results/normalized/: 1706.03762_normalized.txt
experiments/tokenizer-comparison/scripts/: compare_tokenizers.py
experiments/tokenizer-comparison/tests/: __init__.py  test_tokenizers.py  test_utils.py
python-markdown-comparison/: benchmark.py  benchmark_results.json  run_all.sh
templates/: README.md  main.py  pyproject.toml
(+3 files in other folders)
